name:                fib-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fib-hs#readme
license:             MIT
license-file:        LICENSE
author:              Lloyd Chan
maintainer:          lloydmeta@gmail.com
copyright:           2016 Lloyd Chan
category:            Easy
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Fibonacci
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable fib-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , fib-hs
  default-language:    Haskell2010

test-suite fib-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fib-hs
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fib-hs

benchmark fib-hs-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          MainBenchmarkSuite.hs
  build-depends:    base,
                    criterion,
                    fib-hs
  ghc-options:      -Wall
                    -O2
  default-language:    Haskell2010
